Bug 40005 - kernel crash in nv50_crtc_do_mode_set_base during shutdown
Summary: kernel crash in nv50_crtc_do_mode_set_base during shutdown
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/nouveau (show other bugs)
Version: 7.6 (2010.12)
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Nouveau Project
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-08-11 05:14 UTC by Christoph Anton Mitterer
Modified: 2011-10-06 05:52 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
kern.log (118.71 KB, text/plain)
2011-08-11 05:15 UTC, Christoph Anton Mitterer
no flags Details
fix (1.81 KB, patch)
2011-08-21 14:46 UTC, Emil Velikov
no flags Details | Splinter Review

Description Christoph Anton Mitterer 2011-08-11 05:14:06 UTC
Hi.

Attached log shows some strange crash that happens usually when I shut down the system just before poweroff (or reboot).
Seems to be somehow nouveau related?!

Also notice the "[drm:drm_edid_block_valid] *ERROR* EDID checksum is invalid, remainder is 34" during boot a bit earlier.


Using:
- Debian sid
- Linux 3.0
- G86 [GeForce 8400M G] (rev a1)


Cheers,
Chris.
Comment 1 Christoph Anton Mitterer 2011-08-11 05:15:29 UTC
Created attachment 50121 [details]
kern.log
Comment 2 Marcin Slusarz 2011-08-11 09:20:23 UTC
Line starting with "Code: f0 48" seems to be truncated. Can you recheck this is all you got?
Comment 3 Christoph Anton Mitterer 2011-08-11 10:15:02 UTC
I've just checked it... it is complete (well at least nothing more made it in the log).
Comment 4 Emil Velikov 2011-08-21 14:46:32 UTC
Created attachment 50441 [details] [review]
fix

The issue occurs when another monitor has been connected to the card

Upon shutdown, nv50_crtc_do_mode_set_base() tries to use the non-existing FB of the unplugged crtc, thus causing the BUG
Comment 5 Emil Velikov 2011-08-26 10:53:05 UTC
The patch provided fixes the issue on my system

Christoph if you are still having this issue please reopen the bug and provide some fresh information

Marking as FIXED
Comment 6 Florian Mickler 2011-10-06 05:52:22 UTC
A patch referencing this bug report has been merged in Linux v3.1-rc6:

commit ffbc559b0699891c6deb9fd2b4750671eab94999
Author: Emil Velikov <emil.l.velikov@gmail.com>
Date:   Sun Aug 21 22:48:12 2011 +0100

    drm/nv50/crtc: Bail out if FB is not bound to crtc


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.